<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_element"
    android:layout_margin="8dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_alignParentStart="true"
        android:textSize="19sp"
        android:text="@string/reminder"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title">
    </TextView>

    <ImageButton
        android:id="@+id/delete"
        android:layout_marginTop="10dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/deletethicc"
        android:contentDescription="@string/todo" />


</RelativeLayout>