<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="#212121">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginEmail"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/input_field"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:autofillHints="" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/submit_field"
            android:fontFamily="@font/montserrat"
            android:hapticFeedbackEnabled="true"
            android:text="@string/login"
            android:textColor="@android:color/white" tools:targetApi="lollipop" />


        <TextView
            android:id="@+id/SignupPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>



</FrameLayout>